# cogniflow

./: .env.example  .gitignore  AGENTS.md  Jenkinsfile  README.md  package.json  pnpm-lock.yaml
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  eval_report.md  pyproject.toml  requirements-dev.txt  requirements.txt
api/alembic/versions/: 012f8245eb94_add_chat_tables_and_updated_projects.py  20260315_000001_bootstrap_schema.py  20260322_000002_provider_credentials.py  20260322_000003_provider_models.py  20260322_000004_provider_base_url.py  20260322_000005_actionable_report_payloads.py  20260322_000006_report_query_and_actions.py  20260322_000007_pdf_citation_metadata.py  20260322_000008_integrations_and_source_metadata.py  20260412_000009_auth_rbac_baseline.py  20260412_000010_async_worker_runtime.py  20260412_000011_auth_password_rbac.py  20260412_000012_intelligence_critical.py  20260413_000013_radar_action_subtasks.py  20260413_000014_audit_public_links.py  20260429_000015_saved_searches.py  20260524_000016_jobs_source_on_delete_set_null.py  20260527_000017_quiz_attempts.py  9744ba6cc488_add_organization.py  d0e41c422fa6_add_insight_tables.py
api/app/: __init__.py  main.py
api/app/api/: deps.py
api/app/contracts/: __init__.py  common.py  job.py
api/app/core/: config.py  crypto.py  logging.py  security.py
api/app/observability/: __init__.py  telemetry.py
api/scripts/: __init__.py  check_contract_sync.py  inspect_chroma.py  migrate_local_to_s3.py  rag_evaluation.py  run_eval.py  seed_demo.py  smoke_staging.py
api/tests/: conftest.py
(+300 files in other folders)
